--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         </div>
     </header>
 
+
+    <div>
+        sadsada
+    </div>
     <div class="hero-section">
         <div class="hero-msg">
             <p>You are on amazon.com You can also shop on Amazon India for millions of products with fast delivery. <a>Click here to go to amazon.in</a></p>
